# FinanceGPT

./: .env.template  .gitignore  README.md  Resources.py  SETUP_GUIDE.md  Setting_Up_Vector_Store.py  check_books.py  config.py  connect_memory_with_llm.py  finance_calculators.py  financebot.py  financebot_no_auth.py  pyproject.toml  requirements.txt  setup_knowledge_base.bat
.devcontainer/: devcontainer.json
auth/: google_oauth.py
vectorstore/db_faiss/: index.faiss
