[project]
name = "financegpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.12.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-huggingface>=0.3.1",
    "langchain-milvus>=0.2.1",
    "langgraph>=0.6.7",
    "plotly>=6.3.0",
    "pymilvus>=2.6.2",
    "pypdf>=6.1.0",
    "sentence-transformers>=5.1.1",
    "streamlit>=1.50.0",
]
